--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Tec/platform",
+    "name": "tecdynamics/platform",
     "description": "The Tec Platform based on Laravel Framework.",
     "keywords": [
         "Tec",
