--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     ],
     "type": "project",
     "require": {
+        "tecdynamics/assets": "*@dev",
         "barryvdh/laravel-dompdf": "^0.9.0", 
         "intervention/image": "^2.6",
         "kris/laravel-form-builder": "1.16.x-dev",
@@ -46,6 +47,7 @@
     "extra": {
         "laravel": {
             "providers": [
+                
                 "Tec\\Base\\Providers\\BaseServiceProvider",
                 "Tec\\Base\\Providers\\CommandServiceProvider",
                 "Tec\\Base\\Providers\\EventServiceProvider",
