--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "barryvdh/laravel-dompdf": "*", 
         "intervention/image": "^2.6",
         "kris/laravel-form-builder": "^1.52.0",
-        "spatie/laravel-html": "*2",
+        "spatie/laravel-html": "*",
         "xantios/mimey": "^2.2",
         "tightenco/ziggy": "^1.4",
         "yajra/laravel-datatables-buttons": "^4.13",
