--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,15 @@
 {
-    "name": "tecdynamics/platform",
-    "description": "The Tec Platform based on Laravel Framework.",
+    "name": "laravel/laravel",
+    "description": "The Laravel Framework.",
     "keywords": [
-        "Tec",
-        "Tec cms",
-        "Tec platform"
+        "framework",
+        "laravel"
     ],
-    "homepage": "https://tecdynamics.co.uk", 
+    "homepage": "https://tecdynamics.co.uk",
+    "support": {
+        "issues": "https://bugs.tecdynamics.co.uk",
+        "document": "https://docs.tecdynamics.co.uk"
+    },
     "authors": [
         {
             "name": "Tec-Dynamics LTD",
@@ -15,24 +18,33 @@
     ],
     "type": "project",
     "require": {
-        "illuminate/support":"*",
-        "tecdynamics/assets": "*@dev",
-        "barryvdh/laravel-dompdf": "*", 
+        "ext-zip": "*",
+        "ext-gd": "*",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "Tec/assets": "^1.0",
         "intervention/image": "^2.6",
-        "kris/laravel-form-builder": "^1.52.0",
-        "spatie/laravel-html": "*",
+        "kris/laravel-form-builder": "dev-master",
+        "spatie/laravel-html": "^3.2.2",
         "xantios/mimey": "^2.2",
         "tightenco/ziggy": "^1.4",
-        "yajra/laravel-datatables-buttons": "^4.13",
-        "yajra/laravel-datatables-oracle": "^9.18",
+        "yajra/laravel-datatables-buttons": "^9.1",
+        "yajra/laravel-datatables-oracle": "^10.2",
         "guzzlehttp/guzzle": "^6.0|^7.0",
-        "mews/purifier": "^3.3"
+        "mews/purifier": "^3.3",
+        "maatwebsite/excel": "^3.1",
+        "symfony/http-client": "^6.0",
+        "symfony/postmark-mailer": "^6.0",
+        "symfony/mailgun-mailer": "^6.0",
+        "twig/twig": "^3.0",
+        "doctrine/dbal": "^3.2",
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
     "autoload": {
         "psr-4": {
             "Tec\\Support\\": "support/src",
             "Tec\\ACL\\": "acl/src",
             "Tec\\Base\\": "base/src",
+            "Tec\\Base\\Tests\\": "base/tests",
             "Tec\\Dashboard\\": "dashboard/src",
             "Tec\\Media\\": "media/src",
             "Tec\\Setting\\": "setting/src",
@@ -44,7 +56,6 @@
     "extra": {
         "laravel": {
             "providers": [
-                
                 "Tec\\Base\\Providers\\BaseServiceProvider",
                 "Tec\\Base\\Providers\\CommandServiceProvider",
                 "Tec\\Base\\Providers\\EventServiceProvider",
@@ -61,14 +72,21 @@
                 "Tec\\Chart\\Providers\\ChartServiceProvider"
             ],
             "aliases": {
-                "Assets": "Tec\\Base\\Facades\\AssetsFacade",
-                "BaseHelper": "Tec\\Base\\Facades\\BaseHelperFacade",
-                "MetaBox": "Tec\\Base\\Facades\\MetaBoxFacade",
-                "Action": "Tec\\Base\\Facades\\ActionFacade",
-                "Filter": "Tec\\Base\\Facades\\FilterFacade",
-                "EmailHandler": "Tec\\Base\\Facades\\EmailHandlerFacade",
-                "Breadcrumbs": "Tec\\Base\\Facades\\BreadcrumbsFacade",
-                "JsValidator": "Tec\\JsValidation\\Facades\\JsValidatorFacade"
+                "Action": "Tec\\Base\\Facades\\Action",
+                "Assets": "Tec\\Base\\Facades\\Assets",
+                "BaseHelper": "Tec\\Base\\Facades\\BaseHelper",
+                "Breadcrumbs": "Tec\\Base\\Facades\\Breadcrumbs",
+                "DashboardMenu": "Tec\\Base\\Facades\\DashboardMenu",
+                "EmailHandler": "Tec\\Base\\Facades\\EmailHandler",
+                "Filter": "Tec\\Base\\Facades\\Filter",
+                "Form": "Tec\\Base\\Facades\\Form",
+                "Html": "Tec\\Base\\Facades\\Html",
+                "MacroableModels": "Tec\\Base\\Facades\\MacroableModels",
+                "MetaBox": "Tec\\Base\\Facades\\MetaBox",
+                "PageTitle": "Tec\\Base\\Facades\\PageTitle",
+                "JsValidator": "Tec\\JsValidation\\Facades\\JsValidator",
+                "Setting": "Tec\\Setting\\Facades\\Setting",
+                "RvMedia": "Tec\\Media\\Facades\\RvMedia"
             }
         }
     },
