--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
-    "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "name": "tecdynamics/platform",
+    "description": "The Tec CMS Platform based on Laravel Framework.",
     "keywords": [
-        "framework",
+        "tec",
+        "tec cms",
+        "tec platform",
         "laravel"
     ],
     "homepage": "https://tecdynamics.co.uk",
