--- a/composer.json
+++ b/composer.json
@@ -32,8 +32,8 @@
         "symfony/postmark-mailer": "^6.3",
         "symfony/mailgun-mailer": "^6.3",
         "twig/twig": "^3.0",
-        "league/flysystem-aws-s3-v3": "^3.0"
-        "guzzlehttp/guzzle": "^6.0|^7.0",
+        "league/flysystem-aws-s3-v3": "^3.0",
+        "guzzlehttp/guzzle": "^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
