--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "ext-zip": "*",
         "ext-gd": "*",
         "barryvdh/laravel-dompdf": "^2.0",
-        "Tec/assets": "^1.0",
+        "tecdynamics/assets": "*",
         "intervention/image": "^2.6",
         "kris/laravel-form-builder": "dev-master",
         "laravelcollective/html": "^6.2",
